--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-redux": "^7.1.33",
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
@@ -21,13 +21,13 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
-    "typescript": "^5.3.3",
+    "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
